ui: fix translate overflowing to next line

--- a/css/common.css
+++ b/css/common.css
@@ -128,7 +128,7 @@
   font-size: 25px;
   cursor: pointer;
   position: relative;
-  width: 31%;
+  width: 30%;
 }
 
 .ca-button#switch_lang:hover, .ca-button#switch_lang:focus {
